# R-Type

./: .gitignore  CMakeLists.txt  Makefile  README.md  commitlint.config.js  conanfile.txt  cppcheck-config.json  cppcheck-options.txt  l.txt  package-lock.json  package.json  scriptClean.sh
.github/: pull_request_template.md
.github/workflows/: cpp_ci.yml  l.txt  r-type.yml
ECS/: CMakeLists.txt  Makefile  README.md
ECS/include/: Entity.hpp  Registry.hpp  SparseArray.hpp
ECS/include/component/: attribute.hpp  controllable.hpp  drawable.hpp  idPlayer.hpp  level.hpp  life.hpp  position.hpp  score.hpp  shoot_type.hpp  size.hpp  state.hpp  velocity.hpp
ECS/include/system/: system.hpp
ECS/src/: main.cpp
ECS/src/system/: collision_power_up.cpp  collision_power_up_move_system.cpp  collision_power_up_shoot_system.cpp  collision_system.cpp  controllable_system.cpp  create_power_up.cpp  ennemies_system.cpp  kill_system.cpp  level_system.cpp  life_power_up_life.cpp  lose_system.cpp  player_system.cpp  position_system.cpp  registry_system.cpp  shoot_system.cpp  velocity_power_up_move.cpp  velocity_power_up_shoot.cpp  win_system.cpp
ECS/tests/: testsEntity.cpp  testsRegistry.cpp  testsSparseArray.cpp
ECS/tests/system/: testsCollision.cpp  testsCollisionPowerUpLife.cpp  testsCollisionPowerUpMove.cpp  testsCollisionPowerUpShoot.cpp  testsControllable.cpp  testsCreateEntity.cpp  testsKill.cpp  testsLevel.cpp  testsLose.cpp  testsPosition.cpp  testsShoot.cpp  testsSpawnPowerUp.cpp  testsWin.cpp
client/: CMakeLists.txt  GameMenu  Makefile  README.md  r_type_client
client/config/: enemy.json  enemy2.json  enemy3.json  enemy4.json  enemy5.json  explosion.json  menu_background.json  player.json  player2.json  player3.json  player4.json  player5.json  playing_background.json  powerup_life.json  powerup_move.json  powerup_shoot.json  shoot.json  shoot2.json  shoot3.json  shoot4.json
client/config/enemy/: shoot1.json  shoot2.json  shoot3.json  shoot4.json  shoot5.json
client/config/player/: shoot1.json  shoot2.json  shoot3.json  shoot4.json  shoot5.json
client/documentation/: mermaid_archi.md
client/include/: CustomMenu.hpp  DeathAnimation.hpp  Enemy.hpp  Engine.hpp  Game.hpp  Infos.hpp  Level.hpp  Life.hpp  Menu.hpp  OptionsMenu.hpp  ParallaxBackground.hpp  Player.hpp  Score.hpp  SettingsMenu.hpp  Shoot.hpp  SoundManager.hpp  Sprite.hpp  SpriteManager.hpp  State.hpp  TextureManger.hpp  Type.hpp
client/include/client/: Binary.hpp  Client.hpp  ClientBinary.hpp  ClientEnumProtocol.hpp  ClientPacket.hpp  IClient.hpp  IClientPacket.hpp  Sprite.hpp  TcpClient.hpp  TextureManager.hpp
client/src/: Binary.cpp  Client.cpp  CustomMenu.cpp  DeathAnimation.cpp  Display.cpp  Enemy.cpp  Engine.cpp  Infos.cpp  Level.cpp  Life.cpp  Menu.cpp  OptionsMenu.cpp  Packet.cpp  ParallaxBackground.cpp  Player.cpp  Score.cpp  SettingsMenu.cpp  Shoot.cpp  TcpClient.cpp  game.cpp  main.cpp
client_2/: CMakeLists.txt  Makefile
client_2/include/: Background.hpp  Ecs.hpp  Enemy.hpp  Game.hpp  Player.hpp  Shoot.hpp  Sprite.hpp  Text.hpp
client_2/src/: Background.cpp  Enemy.cpp  Game.cpp  Player.cpp  Sprite.cpp  main.cpp
server/: CMakeLists.txt  Makefile  README.md  r_type_server
server/configFile/: level1.json  level1.txt  level2.json  level3.json  level4.json  levelMultiple.json  test.json
server/ecs_build/: Makefile
server/include/: Binary.hpp  ClockManager.hpp  EnumProtocol.hpp  IPacket.hpp  IServer.hpp  LobbyServerTCP.hpp  Packet.hpp  Parser.hpp  ProceduralLevel.hpp  ProtocolHandler.hpp  Server.hpp
server/include/server/: Server.hpp
server/src/: Binary.cpp  LobbyServerTCP.cpp  Packet.cpp  Parser.cpp  ProceduralLevel.cpp  ProtocoleHandler.cpp  Server.cpp  main.cpp
